--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize' //change from kotlin-android-extensions
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
@@ -54,6 +54,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
+    //Gson
+    implementation "com.google.code.gson:gson:$gson_version"
+
     //glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
@@ -70,7 +73,6 @@ dependencies {
 
     //hilt
     implementation("com.google.dagger:hilt-android:$hilt_version")
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
 
     //dagger
