--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         hilt_version = "2.35"
         dagger_version = "2.37"
         nav_version = '2.3.5'
+        gson_version = '2.8.7'
     }
     repositories {
         google()
