--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.appcompat:appcompat:$appcompact_version"
     implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.legacy:legacy-support-v4:$legacy_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
 
     // Activity KTX
