--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         dagger_version = "2.37"
         nav_version = '2.3.5'
         gson_version = '2.8.7'
+        legacy_version = '1.0.0'
     }
     repositories {
         google()
